<resources>
    <string name="app_name">Clever Charge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="getting_data">Getting data...</string>

    <string name="overview">Overview</string>
    <string name="all_stations">All stations</string>
    <string name="fast_charging">Fast charge</string>
    <string name="normal_charging">Normal charge</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome_to_clever_charge">Clever Charge</string>
    <string name="remember_me">Remember me</string>
    <string name="settings">Settings</string>
    <string name="role_set">"Role: "</string>
    <string name="maintenance">Maintenance</string>
    <string name="information">Information</string>
    <string name="defect">Defect</string>
    <string name="details">Details</string>
    <string name="login">Login</string>
    <string name="get_nearby_stations">Get nearby Stations</string>
    <string name="station_list">Station list</string>
    <string name="make_a_choice">Make a choice</string>
    <string name="search_for_stations">Search for stations</string>
    <string name="local">Local</string>
    <string name="favorites">Favorites</string>
    <string name="username_set">"Username: "</string>
    <string name="email_set">"Email: "</string>
    <string name="search_radius">Radius</string>
    <string name="logout">Logout</string>
    <string name="report">Report</string>
    <string name="fix">Fix</string>
    <string name="please_specify_the_problem">Please specify the problem!</string>
    <string name="nc">NC</string>
    <string name="fc">FC</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="staff">Staff</string>
    <string name="empty_fields">Empty fields are not allowed!</string>
    <string name="login_failed">Login failed! Please try again!</string>
    <string name="user_exists">This username or email already exists!</string>
    <string name="register_failed">Registration failed! Please try again!</string>
    <string name="register_success">Registration successful!</string>
    <string name="not_available">Not available</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="update_successful">Update successful!</string>
    <string name="location_cant_be_tracked">Location can\'t be tracked!</string>
    <string name="central_point">Central point</string>
    <string name="remove_marked_stations">Remove marked stations</string>
    <string name="no_stations_available">No stations available!</string>
    <string name="more">more</string>
    <string name="cant_load_defect_stations">Can\'t load defect stations!</string>
    <string name="cant_get_station_list">Can\'t get station list!</string>
    <string name="error_while_getting_data">Error while getting data!</string>
    <string name="dev">Staff</string>
    <string name="user">User</string>
    <string name="available">Available</string>
    <string name="supports_fast_charging">Supports FAST CHARGING</string>
    <string name="does_not_support_fast_charging">Does not support FAST CHARGING</string>
    <string name="power">Power</string>
    <string name="connections">"Connections: "</string>
    <string name="fixed">fixed</string>
    <string name="please_enter_a_description">Please enter a description!</string>
    <string name="thanks_for_report">Thank you for the report!</string>
    <string name="restart_the_app">Something went wrong! Please restart the app!</string>
    <string name="wait_for_location">Please wait until location is tracked!</string>
    <string name="need_permissions">This app needs permissions to access your location.</string>
    <string name="turn_on_provider">Please turn on a location provider!</string>
    <string name="download_update">Update available! Downloading update…</string>
    <string name="no_update">No updates available!</string>
    <string name="download_finish">Update successful!</string>
    <string name="more_information">More information</string>
    <string name="info_issue_label">Issue</string>
</resources>