<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentsLogin.LoginSignInFragment"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clever_charge_logo"
            android:elevation="@dimen/_8sdp"
            tools:ignore="ContentDescription"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/card_background"
                app:cardCornerRadius="@dimen/_16sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_24sdp"
                android:elevation="@dimen/_8sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Login"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="@dimen/_16sdp"
                        android:textColor="@color/primary"
                        android:layout_gravity="center"
                        android:textAllCaps="true"
                        android:shadowColor="@color/lightBlack"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="2"
                        android:fontFamily="@font/poppins_light"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/login_username"
                        android:layout_width="@dimen/_180sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:background="@drawable/txt_box_stroke_login"
                        android:drawableStart="@drawable/ic_person"
                        android:drawableTint="@color/primary"
                        android:hint="@string/username"
                        android:minHeight="48dp"
                        android:padding="@dimen/_4sdp"
                        android:textAlignment="center"
                        android:textColorHint="@color/secondary_text"
                        android:textColor="@color/primary"
                        android:textCursorDrawable="@drawable/text_cursor"
                        android:fontFamily="@font/poppins_light"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/login_password"
                        android:layout_width="@dimen/_180sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/txt_box_stroke_login"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawableTint="@color/primary"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        android:padding="@dimen/_4sdp"
                        android:textAlignment="center"
                        android:textColorHint="@color/secondary_text"
                        android:textColor="@color/primary"
                        android:textCursorDrawable="@drawable/text_cursor"
                        android:fontFamily="@font/poppins_light"/>

                    <CheckBox
                        android:id="@+id/remember_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/primary"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/remember_me"
                        android:textColor="@color/primary_text" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/noAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/primary_text"
                android:layout_marginTop="@dimen/_5sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_11sdp"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_light"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:background="@drawable/round_corner"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_light"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>