<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentsMain.HomeFragment"
    android:background="@color/background">

    <View
        android:id="@+id/headerBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_125sdp"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/overview"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowColor="@color/lightBlack"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:fontFamily="@font/poppins_light"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/ic_graph"
        app:layout_constraintBottom_toBottomOf="@id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtTitle"
        android:tint="@color/white" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@id/headerBackground"
        app:layout_constraintTop_toBottomOf="@id/headerBackground"
        app:cardElevation="@dimen/_8sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_14sdp">

            <TextView
                android:id="@+id/detailHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:text="@string/details"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/poppins_light"/>

            <LinearLayout
                android:id="@+id/stationsLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/fcLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailHeading">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/ic_battery_clean" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/all_stations"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/poppins_light"/>

                <TextView
                    android:id="@+id/all_stations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="23567"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp"
                    android:fontFamily="@font/poppins_light"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fcLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/ncLayout"
                app:layout_constraintStart_toEndOf="@id/stationsLayout"
                app:layout_constraintTop_toBottomOf="@id/detailHeading">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/ic_battery_fc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/fast_charging"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/poppins_light"/>

                <TextView
                    android:id="@+id/fc_stations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="19567"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp"
                    android:fontFamily="@font/poppins_light"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ncLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fcLayout"
                app:layout_constraintTop_toBottomOf="@id/detailHeading">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/ic_battery_nc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/normal_charging"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/poppins_light"/>

                <TextView
                    android:id="@+id/nc_stations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2567"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp"
                    android:fontFamily="@font/poppins_light"/>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cardHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/_minus10sdp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fav_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layoutAnimation="@anim/recycler_anim"
            android:scrollbars="none"
            android:overScrollMode="never"
            android:clipToPadding="false"
            android:padding="@dimen/_16sdp">
        </androidx.recyclerview.widget.RecyclerView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>